# KA-HA

./: README.md  config.yaml  main.py  pyproject.toml
installer_app/: cli_app.py
installer_app/core/: config.py  factory.py  insatller.py  installer.py  logger.py
installer_app/installers/: brew_installer.py  docker_installer.py  package_installer.py  pip_installer.py
installer_app/utils/: constants.py  exceptions.py
