[tool.poetry]
name = "installer"
version = "0.1.0"
description = "Generic Python-based CLI installer that automates package installation"
authors = ["jonathantoaf <yonitoaf123@gmail.com>"]
readme = "README.md"
packages = [{include = "installer_app"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.16.0"
pyyaml = "^6.0"
coloredlogs = "^15.0.1"
click = "^8.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[tool.poetry.scripts]
installer = "installer_app.cli_app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
